# readest_fork

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: feature-request.md  report-bug.md
.github/workflows/: pull-request.yml  release.yml  vercel-merge.yml  vercel-pull-requst.yml
apps/digest-app/: next.config.mjs  package.json
apps/digest-app/src-tauri/: tauri.conf.json
apps/digest-app/src/libs/: document.ts
apps/readest-app/: .env  .env.local.example  .env.tauri  .env.web  .gitignore  i18next-scanner.config.js  next.config.mjs  nginx.conf  open-next.config.ts  package.json  pnpm-lock.yaml  release-notes.json  tailwind.config.ts  tsconfig.json  wrangler.json
apps/readest-app/public/: manifest.json
apps/readest-app/public/locales/ar/: translation.json
apps/readest-app/public/locales/de/: translation.json
apps/readest-app/public/locales/el/: translation.json
apps/readest-app/scripts/: release-ios-appstore.sh  release-mac-appstore.sh
apps/readest-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/readest-app/src-tauri/capabilities/: default.json  desktop.json
apps/readest-app/src-tauri/icons/: icon.icns
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/: Cargo.toml  README.md  build.rs
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/android/: build.gradle.kts
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/android/src/androidTest/java/: ExampleInstrumentedTest.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/android/src/main/java/: Example.kt  ExamplePlugin.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/android/src/test/java/: ExampleUnitTest.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/ios/: Package.swift  README.md
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/ios/Sources/: SafariAuthPlugin.swift
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/ios/Tests/PluginTests/: PluginTests.swift
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/permissions/: default.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/permissions/autogenerated/: reference.md
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/permissions/autogenerated/commands/: auth_with_safari.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/permissions/schemas/: schema.json
apps/readest-app/src-tauri/plugins/tauri-plugin-safari-auth/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
apps/readest-app/src-tauri/src/: lib.rs  main.rs  menu.rs  tauri_traffic_light_positioner_plugin.rs  traffic_light.rs  traffic_light_plugin.rs  transfer_file.rs
apps/readest-app/src/app/: globals.css  layout.tsx  library.module.css  page.tsx
apps/readest-app/src/components/: AboutWindow.tsx  Alert.tsx  BookDetailModal.tsx  Bookshelf.tsx  Button.tsx  Dialog.tsx  Dropdown.tsx  FoliateViewer.tsx  MenuItem.tsx  NavBar.tsx  Navbar.tsx  Popup.tsx  Providers.tsx  Quota.tsx  ReaderContent.tsx  Spinner.tsx  Toast.tsx  WindowButtons.tsx
apps/readest-app/src/context/: AuthContext.tsx  EnvContext.tsx  PHContext.tsx  SyncContext.tsx
apps/readest-app/src/helpers/: auth.ts  cli.ts  shortcuts.ts  updater.ts
apps/readest-app/src/hooks/: useDrag.ts  useFullScreen.ts  useLongPress.ts  useOpenWithBooks.ts  useOutsideClick.ts  usePullToRefresh.ts  useResponsiveSize.ts  useScreenWakeLock.ts  useShortcuts.ts  useSync.ts  useTheme.ts  useTrafficLight.ts  useTranslation.ts
apps/readest-app/src/i18n/: i18n.ts
apps/readest-app/src/libs/: document.ts  edgeTTS.ts  storage.ts  sync.ts  user.ts
apps/readest-app/src/pages/: _app.tsx
apps/readest-app/src/services/: appService.ts  constants.ts  environment.ts  errors.ts  nativeAppService.ts  nativeFileSystem.ts  webAppService.ts
apps/readest-app/src/store/: bookDataStore.ts  libraryStore.ts  notebookStore.ts  parallelViewStore.ts  readerStore.ts  settingsStore.ts  sidebarStore.ts
apps/readest-app/src/styles/: fonts.css  globals.css  themes.ts
apps/readest-app/src/types/: book.ts  records.ts  settings.ts  system.ts  user.ts  view.ts
apps/readest-app/src/utils/: access.ts  book.ts  config.ts  cors.ts  css.ts  event.ts  fetch.ts  file.ts  font.ts  grid.ts  lru.ts  md5.ts  misc.ts  nav.ts  os.ts  queue.ts  s3.ts  sel.ts  serializer.ts  ssml.ts  style.ts  supabase.ts  throttle.ts  toc.ts  transfer.ts  transform.ts  ui.ts  window.ts
ops/: flake.nix
(+109 files in other folders)
