[package]
name = "readest"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "readest"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# FIXME: remove the devtools feature in production
tauri = { version = "2.0.2", features = [ "macos-private-api", "protocol-asset", "devtools"] }
tauri-plugin-log = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-http = "2.0.1"
tauri-build = "2.0.1"
tauri-plugin-devtools = "2.0.0"
[patch.crates-io]
tauri = { path = "../../../packages/tauri/crates/tauri" }
wry = { path = "../../../packages/wry" }
